<resources>
    <string name="app_name">CKMJ_SE_Project</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_have">Have</string>
    <string name="title_family">Family</string>
    <string name="title_need">Need</string>
    <string name="hello_have_fragment">Hello Have Fragment</string>
    <string name="title_input">Input</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="create_a_family">Create a Family</string>
    <string name="or">or</string>
    <string name="input_family_code">Input Family Code</string>
    <string name="family_name">Family Name</string>
    <string name="email">Email</string>
    <string name="family_id">Family ID</string>
    <string name="submit">Submit</string>
    <string name="name_of_item">Name of Item</string>
    <string name="amount">Amount</string>
    <string name="add_to">Add to:</string>
    <string name="have">Have</string>
    <string name="need">Need</string>
    <string name="search_items">Search items</string>
    <string name="search">Search</string>
</resources>