<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/itemNameInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/name_of_item"/>

    <EditText
        android:id="@+id/itemAmountInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/amount"
        android:inputType="number"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonAddToHave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have"/>

    <Button
        android:id="@+id/buttonAddToNeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/need"/>
</LinearLayout>
